# json-form-evaluation

./: LICENSE  README.md  pyproject.toml
json_form_evaluation/: evaluate.py
